@@ -1,12 +1,8 @@
 package tasks;
 
 import common.Person;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -21,67 +17,54 @@ P.P.S Здесь ваши правки желательно прокоммент
  */
 public class Task8 {
 
-  private long count;
+  // убран неиспользуемый count
 
   //Не хотим выдывать апи нашу фальшивую персону, поэтому конвертим начиная со второй
   public List<String> getNames(List<Person> persons) {
-    if (persons.size() == 0) {
-      return Collections.emptyList();
-    }
-    persons.remove(0);
-    return persons.stream().map(Person::getFirstName).collect(Collectors.toList());
+    return persons.stream().map(Person::getFirstName).skip(1).toList();
+    // убрал проверку на пустоту списка - в любом случае stream вернет пустой список, даже если изначально входящий был пуст.
+    // первую персону пропускаем, а не ремувим (реализуем идемпотентность)
   }
 
   //ну и различные имена тоже хочется
   public Set<String> getDifferentNames(List<Person> persons) {
-    return getNames(persons).stream().distinct().collect(Collectors.toSet());
+    return new HashSet<>(getNames(persons));
+    // stream, а тем более использование distinct, заменено на создание HashSet -
+    // структура уже хранит уникальные элементы и нет необходимости в доп операциях,
+    // элементы достаточно переложить из List в новый Set
   }
 
   //Для фронтов выдадим полное имя, а то сами не могут
   public String convertPersonToString(Person person) {
-    String result = "";
-    if (person.getSecondName() != null) {
-      result += person.getSecondName();
-    }
-
-    if (person.getFirstName() != null) {
-      result += " " + person.getFirstName();
-    }
-
-    if (person.getSecondName() != null) {
-      result += " " + person.getSecondName();
-    }
-    return result;
+    if (person == null) return "";
+    return Stream.of(person.getSecondName(), person.getFirstName(), person.getMiddleName())
+            .filter(Objects::nonNull).collect(Collectors.joining(" "));
+    // код стал короче и нагляднее. исправлено задвоение SecondName,
+    // джоин производится в стримах с фильтрацией null-значений
   }
 
   // словарь id персоны -> ее имя
   public Map<Integer, String> getPersonNames(Collection<Person> persons) {
-    Map<Integer, String> map = new HashMap<>(1);
-    for (Person person : persons) {
-      if (!map.containsKey(person.getId())) {
-        map.put(person.getId(), convertPersonToString(person));
-      }
-    }
-    return map;
+    return persons == null ? Collections.emptyMap() :
+    persons.stream().collect(Collectors.toMap(Person::getId, this::convertPersonToString, (person1, person2) -> person1));
+    // от цикла ушел к стриму для повышения читаемости кода
+    // исключена ситуация, когда secondName пустой и итоговая строка начнется с пробела
   }
 
   // есть ли совпадающие в двух коллекциях персоны?
   public boolean hasSamePersons(Collection<Person> persons1, Collection<Person> persons2) {
-    boolean has = false;
-    for (Person person1 : persons1) {
-      for (Person person2 : persons2) {
-        if (person1.equals(person2)) {
-          has = true;
-        }
-      }
-    }
-    return has;
+    if (persons1 == null || persons2 == null) return false;
+    Set<Person> personSet = new HashSet<>(persons1);
+    personSet.retainAll(persons2);
+    return !personSet.isEmpty();
+    // retain'ом оставляем только повторяющиеся элементы: если в итоге список пустой, значит повторений нет
+    // по сложности снизились с O(n*m) до O(n+m)
   }
 
   //...
   public long countEven(Stream<Integer> numbers) {
-    count = 0;
-    numbers.filter(num -> num % 2 == 0).forEach(num -> count++);
-    return count;
+    return numbers == null ? 0 : numbers.filter(num -> num % 2 == 0).count();
+    // нет необходимости в создании переменной для счетчика
+    // и уж тем более вычислять итоговое количество перебором получившейся коллекции
   }
 }
